--- a/src/components/search/search.sass
+++ b/src/components/search/search.sass
@@ -2,6 +2,7 @@
     margin-top: 130px
     text-align: center
     color: #000
+    text-align: center
 .search__empty.no-active
     display: none
 .search__input 
